# rs_kis

./: .env  .env.example  .env.test  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: fmt.yml  lint.yml  sync-kis-api.yml  test.yml
crates/bot/: Cargo.toml
crates/bot/src/: bot.rs  config.rs  error.rs  lib.rs  types.rs
crates/bot/src/control/: kill_switch.rs  recovery.rs
crates/bot/src/db/: mod.rs
crates/bot/src/discovery/: mod.rs
crates/bot/src/execution/: order_state.rs
crates/bot/src/position/: mod.rs
crates/bot/src/qualification/: hard_block.rs  mod.rs  setup_score.rs
crates/bot/src/regime/: mod.rs
crates/bot/src/risk/: guard.rs  mod.rs
crates/bot/src/signal/: llm_engine.rs  mod.rs  rule_engine.rs
crates/bot/tests/: test_alert.rs  test_bot_shutdown.rs  test_config.rs  test_db.rs  test_discovery.rs  test_error.rs  test_hard_block.rs  test_integration_smoke.rs  test_kill_switch.rs  test_llm_engine.rs  test_monitoring.rs  test_order_state.rs  test_position.rs  test_recovery.rs  test_regime.rs  test_risk_guard.rs  test_risk_sizer.rs  test_rule_engine.rs  test_setup_score.rs  test_signal_engine.rs  test_smoke.rs  test_types.rs
crates/bot/tests/fixtures/: bot_config.toml
crates/domain/: Cargo.toml
crates/domain/src/: command.rs  event.rs  lib.rs  types.rs
crates/kis_api/: Cargo.toml  README.md  build.rs  kis-openapi.yaml
crates/kis_api/examples/: master_verify.rs  verify_api.rs  verify_ws.rs
crates/kis_api/src/: auth.rs  client.rs  config.rs  domestic_client.rs  environment.rs  error.rs  event.rs  lib.rs  mock_domestic.rs  stream.rs  traits.rs  websockets.rs
crates/kis_api/src/api/overseas/: order_deposit.rs
crates/kis_api/src/auth/: approval_key.rs  mod.rs
crates/kis_api/src/endpoints/: mod.rs
crates/kis_api/src/models/: mod.rs
crates/kis_api/src/rest/: http.rs  mod.rs  rate_limit.rs
crates/kis_api/src/rest/domestic/: inquiry.rs  mod.rs  order.rs  types.rs
crates/kis_api/src/rest/overseas/: deposit.rs  mod.rs  price.rs  types.rs
crates/kis_api/src/rest/overseas/analysis/: market.rs  mod.rs  ranking.rs
crates/kis_api/src/rest/overseas/inquiry/: balance.rs  mod.rs  orders.rs  profit.rs
crates/kis_api/src/rest/overseas/order/: cancel.rs  mod.rs  place.rs
crates/kis_api/src/rest/overseas/quote/: chart.rs  corporate.rs  mod.rs  orderbook.rs  price.rs  search.rs
crates/kis_api/src/websockets/: history.rs
crates/kis_api/src/websockets/message/: response.rs
crates/kis_api/tests/: verify_generated.rs
crates/kis_api/tests/fixtures/domestic/inquiry/: balance.json  daily_chart.json  unfilled_orders.json  volume_ranking.json
crates/kis_api/tests/fixtures/domestic/order/: cancel_order.json  place_order.json
crates/kis_api/tests/fixtures/overseas/analysis/: market_cap.json  new_highlow.json  trade_turnover.json  trade_vol.json  updown_rate.json  volume_power.json  volume_surge.json
crates/kis_api/tests/fixtures/overseas/inquiry/: balance.json  buyable_amount.json  order_history.json  period_profit.json  unfilled_orders.json
crates/kis_api/tests/fixtures/overseas/order/: cancel_order.json  place_order.json
crates/kis_api/tests/fixtures/overseas/quote/: daily_chart.json  dividend.json  holidays.json  minute_chart.json  news.json  orderbook.json  price.json  search.json  symbol_info.json
crates/kis_api/tests/integration/: domestic_order.rs  mod.rs  order.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: usage.md
docs/superpowers/plans/: 2026-03-21-docs-ci.md  2026-03-21-plan1-workspace-domain.md  2026-03-21-plan2-kis-api.md  2026-03-21-plan3a-overseas-order-inquiry.md  2026-03-21-plan3b-overseas-quote.md  (+6 more)
scripts/: fetch_spec.py  generate_code.py  overrides.yaml  test_overrides.yaml  type_map.yaml  vts_api_test.py
src/: api.rs  client.rs  config.rs  configurations.rs  credentials.rs  environment.rs  error.rs  lib.rs  logger.rs  main.rs  websockets.rs
src/api/: http.rs  mod.rs  oauth_certification.rs  overseas_order_deposit.rs  overseas_stock_price.rs
src/core/: file_io.rs  http.rs  mod.rs
src/credentials/: token.rs
src/extentions/: analyzer.rs
src/kis_api/: approval_key.rs  mod.rs
src/types/: mod.rs  token.rs
src/websockets/: approval_key.rs  crypto.rs  history.rs  message.rs
(+10 files in other folders)
