[package]
name = "kis_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"

# Date/time (KST)
chrono = { version = "0.4", features = ["serde"] }

# Decimal arithmetic (no f64 for prices/quantities)
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "chrono",
    "migrate",
] }

# HTTP (for Finnhub REST API)
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File path expansion (~/ → absolute)
shellexpand = "3"

# Jitter for retry backoff
rand = "0.8"

# Internal crates
kis_api = { path = "../kis_api" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
