[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
# async-trait은 domain 크레이트에 불필요 — 트레이트/비즈니스 로직 없음
