[package]
name = "kis_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP
reqwest = { version = "0.12", features = ["json"] }
# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
thiserror = "2"
# Async traits
async-trait = "0.1"
# Date/time (KST timezone support)
chrono = { version = "0.4", features = ["serde"] }
# Decimal arithmetic (no f64 for prices)
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
# File path expansion (token cache)
shellexpand = "3"
# HTTP types
http = "1"
# Logging
log = "0.4"
# Domain shared types
domain = { path = "../domain" }
# Cancellation token
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
