[package]
name = "kis_api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde-float"] }
rust_decimal_macros = "1.32"
thiserror = "1.0"
tracing = "0.1"
dotenvy = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
